--- a/StandardDigitalSignature/StandardDigitalSignature.csproj
+++ b/StandardDigitalSignature/StandardDigitalSignature.csproj
@@ -1,12 +1,39 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<Title>Standard digital signature</Title>
+		<Description>Easy-to-use library for creating digital identities based on encryption and digital signature of document and validation of signatures.</Description>
+		<Version>$([System.DateTime]::Now.ToString("1.yy.MM.dd"))</Version>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<PackageTags>digital signature; signature; sign; digital sign, signature validation, pdf signature, document signature</PackageTags>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageProjectUrl>https://www.nuget.org/packages/StandardDigitalSignature/</PackageProjectUrl>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NBitcoin" Version="7.0.26" />
-    <PackageReference Include="SecureStorage" Version="1.23.5.29" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="NBitcoin" Version="7.0.26" />
+		<PackageReference Include="SecureStorage" Version="1.23.5.29" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
+	<Target Name="SetPackageVersion" DependsOnTargets="Build">
+		<PropertyGroup>
+			<!-- <PackageVersion>$([System.DateTime]::Now.ToString(&quot;yyyy.MM.dd.HHmmss&quot;))</PackageVersion> -->
+			<!-- You can customize the format and the rule about how version increases here. -->
+			<PackageVersion>$([System.DateTime]::Now.ToString("1.yy.MM.dd"))</PackageVersion>
+		</PropertyGroup>
+	</Target>
 
 </Project>
