--- a/DigitalSignatureWebUI/DigitalSignatureWebUI.csproj
+++ b/DigitalSignatureWebUI/DigitalSignatureWebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.15" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.15" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\StandardDigitalSignature\StandardDigitalSignature.csproj" />
+    <ProjectReference Include="..\..\DigitalSignature\StandardDigitalSignature\StandardDigitalSignature.csproj" />
   </ItemGroup>
 
 </Project>
